--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.16",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.2",
+    "astro": "^4.16.16",
+    "astro-icon": "^1.1.4",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
   }
 }
